# CollectorVision

./: .gitattributes  .gitignore  COMMERCIAL_LICENSE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  refresh-web-scanner-assets.yml
collector_vision/: __init__.py  catalog.py  gallery.py  games.py  hfd.py  identifier.py  identify.py  interfaces.py  manifest.py  retrieval.py
collector_vision/catalogs/: __init__.py  base.py
collector_vision/detectors/: __init__.py  canny.py  fixed.py  neural.py
collector_vision/embedders/: __init__.py  hash.py  neural.py
collector_vision/weights/: __init__.py  detector_mvit_simcc_lc5_img384_ph10_seedin_blr10_fz2_e45.onnx  identifier_mobilevit_xxs_multitask_illustration_id+set_code_shared_128d+128d_mvitxxs_shared2h_arcface_v2light_img448_ph10_e15.onnx  identifier_mobilevit_xxs_multitask_illustration_id+set_code_shared_128d+128d_mvitxxs_shared2h_arcface_v2light_img448_ph10_e15.onnx.data
docs/: edge_model_optimization.md
docs/animation/: pipeline_explained.py  precompute.py  precomputed.json  script.md
examples/: custom_identifier.py  eval_accuracy.py  identify_image.py  quickstart.py
examples/advanced/: custom_pipeline.py
examples/server/: README.md  server.py
examples/web_scanner/: ARCHITECTURE.md  ASSET_DEPLOY_PLAN.md  README.md  app.js  applet_example.css  applet_example.html  applet_example.js  assets.bundle.json  assets.manifest.example.json  build.json  coi-serviceworker.js  enricher.worker.mjs  index.html  model_benchmark.html  scanner.worker.mjs  style.css
examples/web_scanner/assets/: manifest.json
examples/web_scanner/lib/: collectorvision-scanner-applet.mjs
experiments/webgpu-android-arm/: README.md  browser_test.html  create_minimal_model.py  expected_outputs.json  requirements.txt  results-20260424-223816.json  results-20260424-223843.json  run_experiment.py  test_conv_bn_relu.onnx  test_global_avgpool_gemm.onnx  test_single_conv.onnx  test_two_conv.onnx
scripts/: benchmark_onnx_models.py  eval_pipeline_accuracy.py  export_web_scanner_assets.py  generate_manifests.py  ingest_bug_reports.py  measure_web_scanner_memory.py  run_detector_on_test_images.py  run_wasm_benchmark.py  run_web_scanner_local.sh
tests/: conftest.py  test_capture_regression.py  test_catalog.py  test_examples_integration.py  test_interfaces.py  test_pipeline_consistency.py  test_retrieval.py  test_server_integration.py
tests/fixtures/captures/: cv_2026-04-24T16-43-41.js-cpu.json  cv_2026-04-24T16-43-41.python.json  cv_2026-04-24T18-59-58.js-cpu.json  cv_2026-04-24T18-59-58.python.json  cv_2026-04-24T19-10-45.js-cpu.json  cv_2026-04-24T19-10-45.python.json  cv_2026-04-24T19-17-23.js-cpu.json  cv_2026-04-24T19-17-23.python.json
tests/js/: bisect_webgpu_versions.mjs  package-lock.json  package.json  test_pipeline.mjs  test_webgpu_vs_wasm.mjs
