[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collectorvision"
version = "0.1.0.dev0"
description = "Card identification library for collectible card games (MTG, Pokémon, and more)"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "onnxruntime>=1.17",
    "Pillow>=9.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.7",
]

[project.optional-dependencies]
# Hash-based embedders (HashEmbedder) — not needed for the default Milo neural gallery
hash = [
    "imagehash>=4.3",
    "scipy>=1.10",
]
# Example server
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["collector_vision*"]

[tool.setuptools.package-data]
# Single-file ONNX weights bundled in the wheel (cornelius.onnx, milo.onnx)
collector_vision = ["weights/*.onnx"]
